--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ var query = {
     find: {
       "out.h1": "6d02",
       "out.s2": {
-        "$regex": "#memochicken", "$options": "i"
+        "$regex": "#memobunny", "$options": "i"
       }
     }
   },
@@ -200,12 +200,12 @@ document.addEventListener("DOMContentLoaded", function() {
     convert(0.51, "USD")
     .then(function(amount) {
       databutton.build({
-        data: ["0x6d02", message + " #memochicken"],
+        data: ["0x6d02", message + " #memobunny"],
         button: {
           $el: "#button",
           $cash: {
             to: [{
-              address: "qq4kp3w3yhhvy4gm4jgeza4vus8vpxgrwc90n8rhxe",
+              address: "qq0e889q7eh36cezkn0uv8y8364rls669cdsehqfut",
               value: amount
             }]
           },
@@ -238,21 +238,21 @@ document.addEventListener("DOMContentLoaded", function() {
 </head>
 <body>
   <div class='form'>
-    <input id='msg' placeholder='Send a memo to the chickens to feed them!'></input>
+    <input id='msg' placeholder='Send a memo to the bunnies to feed them!'></input>
     <a href='#' id='done' class='btn'><i class='fas fa-kiwi-bird'></i> Feed!</a>
   </div>
   <div id='modal' class='hidden'>
-    <div class='caption'>Slide the button, feed the chicken!</div>
+    <div class='caption'>Slide the button, feed the bunny!</div>
     <div id='button'></div>
   </div>
   <div class='feed'>
     <a href="#" id='handle'><i class='fas fa-angle-double-up'></i> hide</a>
     <div class='content'>
       <h2>
-        <i class='fas fa-kiwi-bird'></i> memochicken
+        <i class='fas fa-kiwi-bird'></i> memobunny
       </h2>
       <div>Post a memo, feed the chicken.</div>
-      <div class='well'>Powered by <a href="https://github.com/unwriter/memochicken">Moneybutton + Memo.cash + Bitsocket + BitDB + HandCash + Coinbase API + The Great "Twitch feeds $Chicken"</a></div>
+      <div class='well'>Powered by <a href="https://github.com/unwriter/memochicken">Moneybutton + Memo.cash + Bitsocket + BitDB + HandCash + Coinbase API + The Great "Twitch feeds $Bunny"</a></div>
       <div class='items'></div>
     </div>
   </div>
