--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ var convert = function(amount, unit) {
 document.addEventListener("DOMContentLoaded", function() {
   // iframe init
   var iframe = document.createElement("iframe");
-  iframe.src= "https://player.twitch.tv/?channel=redpepper261";
+  iframe.src= "https://player.twitch.tv/?channel=imnotken";
   iframe.frameborder="0"
   iframe.allowfullscreen="true"
   iframe.scrolling="no"
