--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@ document.addEventListener("DOMContentLoaded", function() {
       <h2>
         <i class='fas fa-kiwi-bird'></i> memobunny
       </h2>
-      <div>Post a memo, feed the chicken.</div>
+      <div>Post a memo, feed the bunny.</div>
       <div class='well'>Powered by <a href="https://github.com/unwriter/memochicken">Moneybutton + Memo.cash + Bitsocket + BitDB + HandCash + Coinbase API + The Great "Twitch feeds $Bunny"</a></div>
       <div class='items'></div>
     </div>
