--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:creator" content="@_unwriter" />
-<meta name="twitter:title" content="Memochicken" />
-<meta name="twitter:description" content="Post a memo, feed the chicken." />
+<meta name="twitter:title" content="Memobunny" />
+<meta name="twitter:description" content="Post a memo, feed the bunny." />
 <meta name="twitter:image" content="https://unwriter.github.io/memochicken/screenshot.png" />
 <meta property="og:url" content="https://unwriter.github.io/memochicken" />
 <meta property="og:type"   content="website" />
-<meta property="og:title" content="Memochicken" />
-<meta property="og:description" content="Post a memo, feed the chicken." />
+<meta property="og:title" content="Memobunny" />
+<meta property="og:description" content="Post a memo, feed the bunny." />
 <meta property="og:image" content="https://unwriter.github.io/memochicken/screenshot.png" />
 <script src="https://api.moneybutton.com/moneybutton.js"></script>
 <script src='https://unpkg.com/datacash'></script>
